// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge snapshot Badge demo snapshot 0 1`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "20px",
    }
  }
>
  <div
    className="bui-badge bui-badge-position"
  >
    <div
      className="bui-badge-primary bui-badge-contained bui-badge-standard"
    >
      12
    </div>
    <div
      className="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        className="bui-image bui-avatar-img"
        style={
          Object {
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <img
          className="bui-image-img bui-image-loaded"
          loading="eager"
          onError={[Function]}
          onLoad={[Function]}
          src="//perico.damai.cn/userheadphotos/927551/185510204.jpg"
          style={
            Object {
              "objectFit": "cover",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge snapshot Badge demo snapshot 0 2`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <div
    className="bui-badge bui-badge-position"
  >
    <div
      className="bui-badge-primary bui-badge-contained bui-badge-standard"
    >
      1
    </div>
    <div
      className="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        className="bui-image bui-avatar-img"
        style={
          Object {
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <img
          className="bui-image-img bui-image-loaded"
          loading="eager"
          onError={[Function]}
          onLoad={[Function]}
          src="//perico.damai.cn/userheadphotos/927551/185510204.jpg"
          style={
            Object {
              "objectFit": "cover",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge snapshot Badge demo snapshot 0 3`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
    }
  }
>
  <div
    className="bui-badge bui-badge-position"
  >
    <div
      className="bui-badge-primary bui-badge-contained bui-badge-dot"
    />
    <div
      className="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        className="bui-image bui-avatar-img"
        style={
          Object {
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <img
          className="bui-image-img bui-image-loaded"
          loading="eager"
          onError={[Function]}
          onLoad={[Function]}
          src="//perico.damai.cn/userheadphotos/927551/185510204.jpg"
          style={
            Object {
              "objectFit": "cover",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge snapshot Badge demo snapshot 0 4`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
    }
  }
>
  <div
    className="bui-badge bui-badge-position"
  >
    <div
      className="bui-badge-primary bui-badge-contained bui-badge-bubble"
    >
      12
    </div>
    <div
      className="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        className="bui-image bui-avatar-img"
        style={
          Object {
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <img
          className="bui-image-img bui-image-loaded"
          loading="eager"
          onError={[Function]}
          onLoad={[Function]}
          src="//perico.damai.cn/userheadphotos/927551/185510204.jpg"
          style={
            Object {
              "objectFit": "cover",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge snapshot Badge demo snapshot 0 5`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
    }
  }
>
  <div
    className="bui-badge bui-badge-position"
  >
    <div
      className="bui-badge-primary bui-badge-contained bui-badge-standard"
    >
      12
    </div>
    <div
      className="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        className="bui-image bui-avatar-img"
        style={
          Object {
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <img
          className="bui-image-img bui-image-loaded"
          loading="eager"
          onError={[Function]}
          onLoad={[Function]}
          src="//perico.damai.cn/userheadphotos/927551/185510204.jpg"
          style={
            Object {
              "objectFit": "cover",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="bui-badge bui-badge-position"
  >
    <div
      className="bui-badge-primary bui-badge-contained bui-badge-bubble"
    >
      12
    </div>
    <div
      className="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        className="bui-image bui-avatar-img"
        style={
          Object {
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <img
          className="bui-image-img bui-image-loaded"
          loading="eager"
          onError={[Function]}
          onLoad={[Function]}
          src="//perico.damai.cn/userheadphotos/927551/185510204.jpg"
          style={
            Object {
              "objectFit": "cover",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge snapshot Badge demo snapshot 0 6`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "20",
    }
  }
>
  <div
    className="bui-badge bui-badge-position"
  >
    <div
      className="bui-badge-primary bui-badge-outlined bui-badge-standard"
    >
      12
    </div>
    <div
      className="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        className="bui-image bui-avatar-img"
        style={
          Object {
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <img
          className="bui-image-img bui-image-loaded"
          loading="eager"
          onError={[Function]}
          onLoad={[Function]}
          src="//perico.damai.cn/userheadphotos/927551/185510204.jpg"
          style={
            Object {
              "objectFit": "cover",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="bui-badge bui-badge-position"
  >
    <div
      className="bui-badge-primary bui-badge-outlined bui-badge-bubble"
    >
      12
    </div>
    <div
      className="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        className="bui-image bui-avatar-img"
        style={
          Object {
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <img
          className="bui-image-img bui-image-loaded"
          loading="eager"
          onError={[Function]}
          onLoad={[Function]}
          src="//perico.damai.cn/userheadphotos/927551/185510204.jpg"
          style={
            Object {
              "objectFit": "cover",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge snapshot Badge demo snapshot 0 7`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <div
    className="bui-badge bui-badge-position"
  >
    <div
      className="bui-badge-primary bui-badge-contained bui-badge-standard"
    >
      99+
    </div>
    <div
      className="bui-avatar bui-avatar-medium bui-avatar-rounded"
    >
      <div
        className="bui-image bui-avatar-img"
        style={
          Object {
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <img
          className="bui-image-img bui-image-loaded"
          loading="eager"
          onError={[Function]}
          onLoad={[Function]}
          src="//perico.damai.cn/userheadphotos/927551/185510204.jpg"
          style={
            Object {
              "objectFit": "cover",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
